# Encrypted_Notepad

./: .gitignore  LICENSE  Makefile  README.md  encrypted_notepad_rc.ini  requirements.txt  setup.cfg
data/: Encrypted Notepad.desktop
src/encrypted_notepad/: config_handler.py  cryptography_handler.py  main.py
