[metadata]
name = encrypted_notepad
version = 0.1
author = Qyutou
author_email = qyutou@gmail.com
description = Simple notepad that can encrypt/decrypt text files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
project_urls =
    =https://github.com/Qyutou/Encrypted_Notepad

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.5.*
packages = find:
package_dir =
    =src
install_requirements =
    pycryptodome
setup_requires =
    setuptools >=38.3.0

[options.entry_points]
gui_scripts =
    encrypted_notepad = encrypted_notepad.main:main



[options.packages.find]
where = src